# whisperx-transcribe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
assets/sample/: README.md
nbs/: 01_explore_segments.ipynb  02_chat.ipynb  02_rag_embeddings.ipynb  02_rag_embeddings_multi_index.ipynb
nbs/storage/: index_store.json
prompts/: conv_action_items_01.md  conv_disagreements_01.md  conv_key_decisions_01.md  conv_key_items_01.md  conv_tldr_01.md  instructions_01.md  speaker_summary_01.md  system_01.md  user_conversation_01.md  user_final_01.md  user_per_speaker_01.md  user_single_01.md
src/whisperx_transcribe/: __init__.py  cli.py  infer.py  query_engines.py  tldr.py  utils.py
