[project]
name = "whisperx-transcribe"
version = "0.1.0"
description = ""
authors = [
    {name = "Geevarghese George",email = "Geevarghese.George@avl.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "whisperx (>=3.4.2,<4.0.0)",
    "setuptools-rust (>=1.11.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ctranslate2 (<=4.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
